cmake_minimum_required(VERSION 3.16)
project(sport_club_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(sport_club_1 main.cpp
        Enums/Enums_defs.h
        Enums/enums_defs.cpp
        Human/error_defs.h
        Human/error_defs.cpp
        Human/manager_defs.h
        Human/manager_defs.cpp
        Human/janitor_defs.h
        Human/janitor_defs.cpp
        Human/client_defs.h
        Human/client_defs.cpp
        Human/accountant_defs.h
        Human/accountant_defs.cpp
        Human/employee_base.h
        Human/employee_base.cpp
        Human/person_base.h
        Human/person_base.cpp
        Human/frontdesk_defs.h
        Human/frontdesk_defs.cpp
        Human/social_mgr_defs.cpp
        Human/social_mgr_defs.h
        Human/coach_defs.cpp
        Human/coach_defs.h
        Mirror/reflector_defs.cpp
        Mirror/reflector_defs.h
        Reception/client_registry.cpp
        Reception/client_registry.h
        Reception/key_rack.cpp
        Reception/key_rack.h
        Reception/access_defs.cpp
        Reception/access_defs.h
        Reception/frontdesk.cpp
        Reception/frontdesk.h
        Reception/membership_defs.cpp
        Reception/membership_defs.h
        Room/zone_base.cpp
        Room/zone_base.h
        Room/changing_room_defs.cpp
        Room/changing_room_defs.h
        Room/fitness_zone.cpp
        Room/fitness_zone.h
        Room/gym_zone.cpp
        Room/gym_zone.h
        Room/storage_defs.cpp
        Room/storage_defs.h
        Room/space_defs.cpp
        Room/space_defs.h
        Room/sauna_zone.cpp
        Room/sauna_zone.h
        Room/scale_defs.cpp
        Room/scale_defs.h
        Room/pool_zone.cpp
        Room/pool_zone.h
        Room/ring_zone.cpp
        Room/ring_zone.h
        SM/insta_defs.cpp
        SM/insta_defs.h
        SM/social_base.cpp
        SM/social_base.h
        SM/tiktok_defs.cpp
        SM/tiktok_defs.h
        Schedule/schedule_mgr.cpp
        Schedule/schedule_mgr.h
        Shop/exercise_ball_defs.cpp
        Shop/exercise_ball_defs.h
        Shop/creatine_supplement.cpp
        Shop/creatine_supplement.h
        Shop/beverage_defs.cpp
        Shop/beverage_defs.h
        Shop/pool_slippers_defs.cpp
        Shop/pool_slippers_defs.h
        Shop/product_base.cpp
        Shop/product_base.h
        Shop/headband_defs.cpp
        Shop/headband_defs.h
        Shop/jump_rope_defs.h
        Shop/jump_rope_defs.cpp
        Shop/protein_bar_defs.cpp
        Shop/protein_bar_defs.h
        Shop/swim_cap_defs.cpp
        Shop/swim_cap_defs.h
        Shop/swimwear_defs.cpp
        Shop/swimwear_defs.h
        Shop/towel_defs.cpp
        Shop/towel_defs.h
        Shop/workout_gloves_defs.cpp
        Shop/workout_gloves_defs.h)
